<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bogota">

    <ImageView
        android:id="@+id/bogfon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Im"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/verde"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

    <ImageView
        android:id="@+id/bogim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/img3"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="@+id/bogfon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/_21"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/parques"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parques"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bogfon"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="@+id/bogfon"
        app:layout_constraintTop_toTopOf="@+id/bogim"
        app:layout_constraintVertical_bias="0.875" />

    <Button
        android:id="@+id/museos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/inactivo"
        android:text="@string/museos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.791"
        app:layout_constraintStart_toStartOf="@+id/bogfon"
        app:layout_constraintTop_toTopOf="@+id/bogim"
        app:layout_constraintVertical_bias="0.875" />

    <TextView
        android:id="@+id/des"
        android:layout_width="348dp"
        android:layout_height="310dp"
        android:layout_marginTop="116dp"
        android:text="@string/est_en_el_centro_del_territorio_colombiano_en_el_altiplano_cundiboyacense_y_sobre_la_sabana_que_lleva_su_mismo_nombre_la_ciudad_hace_parte_de_la_regi_n_andina_una_de_las_seis_regiones_del_pa_s_bogot_es_verde_gracias_a_sus_parques_y_a_los_cerros_orientales_que_dominan_los_santuarios_de_monserrate_y_guadalupe"
        android:textAlignment="center"
        android:textColor="#EAE3E3"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.368"
        app:layout_constraintStart_toStartOf="@+id/bogfon"
        app:layout_constraintTop_toTopOf="@+id/bogim"
        app:layout_constraintVertical_bias="0.423"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>